# warpkate

./: .gitignore  06-Cloud_AI_Services_part1.md  06-Cloud_AI_Services_part3.md  06-Cloud_AI_Services_part6.md  CMakeLists.txt  CMakeLists.txt.updated  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FOCUS_ENHANCEMENT_README.md  GITHUB_PROFILE.md  INSTALLATION.md  KDE_FORUM_POSTS.md  PROJECT_STATUS.md  README.md  README_CONCISE.md  RELEASE_NOTES_v0.15.md  WARPKATE_NOTES.md  WarpKate_Build_Instructions.md  better_debug.sh  build_install.sh  cleanup.sh  final_fix.sh  fix_anchor_clicked.sh  fix_build_errors.sh  fix_connection.sh  fix_link_handling.sh  focus_enhancement_instructions.txt  focus_implementation.cpp  implementation_instructions.md  improved_filter.cpp  improved_network_handler.cpp  improved_openai.cpp  interactive_file_paths.cpp  interactive_file_paths_part1.cpp  interactive_file_paths_part2.cpp  interactive_file_paths_part3.cpp  interactive_file_paths_part4.cpp  interactive_focus_enhancement.cpp  manual_fix.sh  manual_integration_guide.md  (+3 more)
docs/: ProjectProposal.md  README.md  TechnicalSpecification.md  ai_implementation_plan.md  design_philosophy_multiple_providers.md  troubleshooting_summary.md  warpkateview_changes.txt  warpkateview_implementation_changes.txt
resource_fix_backup_20250513_011052/: debug_patch.txt  katerc  warpkate.qrc  warpkateplugin.cpp
scripts/: DONOTUSE.build_and_install.sh  DONOTUSE.install_warpkate_plugin.sh  build_and_install.sh  diagnostic_script.sh  force_rebuild_resources.sh  ultimate_resource_fix.sh
src/: CMakeLists.txt  aiservice.cpp  aiservice.h  apikeymanager.cpp  apikeymanager.h  blockmodel.cpp  blockmodel.h  openai_provider.cpp  openai_provider.h  terminalblockview.cpp  terminalemulator.cpp  terminalemulator.h  warpkate.qrc  warpkateconfigpage.cpp  warpkateconfigpage.h  warpkateplugin.cpp  warpkateplugin.h  warpkateplugin.json  warpkatepreferencesdialog.cpp  warpkatepreferencesdialog.h  warpkateview.cpp  warpkateview.h
src/ai/: aiprovider.cpp  aiprovider.h  aiservice.cpp  apikeymanager.cpp  apikeymanager.h  openai_provider.cpp  openai_provider.h
src/config/: warpkateconfigpage.cpp  warpkatepreferencesdialog.cpp  warpkatepreferencesdialog.h
src/core/: warpkate.qrc  warpkateplugin.cpp  warpkateplugin.json  warpkateview.cpp  warpkateview.h
src/terminal/: blockmodel.cpp  blockmodel.h  filelisting.cpp  filelisting.h  qtermwidgetemulator.cpp  qtermwidgetemulator.h  terminal_filter.cpp  terminalblockview.cpp  terminalblockview.h  terminaloutputprocessor.cpp  terminaloutputprocessor.h
src/ui/: commandinput.cpp  commandinput.h  configwidget.ui  conversationview.cpp  conversationview.h  warpkatewidget.ui
src/util/: interactive_elements.cpp  interactive_elements.h
